<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云球</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_match">比赛</string>
    <string name="main_tab_team">球队</string>
    <string name="main_tab_chat">聊天</string>
    <string name="mian_tab_me">我</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="me_myinfo">个人信息</string>
    <string name="my_moments">我的空间</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="recommend">推荐给好友</string>
    <string name="about">关于</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
     <string name="commit">提交</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="show_notice">自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请key!申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>

    <!-- 足球 -->
    <string name="mobile">手机号</string>
    <string name="hint_mobile">请输入手机号&#8230;</string>
    <string name="tv_accept">我已经阅读并接受</string>
    <string name="tv_agreement">《用户协议》</string>
    <string name="msg_input_phone">账号</string>
    <string name="hit_password">密码</string>
    <string name="hit_reset_password">请重新设置密码</string>
    <string name="msg_input_verifi">请输入验证码</string>
    <string name="send_verifi_to">验证码已经发送到</string>
    <string name="send_verifi">获取验证码</string>
    <string name="reset_verifi">重发验证码</string>
    <string name="upload_avatar">上传头像</string>
    <string name="hint_selete_birth_date">选择出生日期</string>
    <string name="register_selete_not_update">性别选择后不能修改</string>
    <string name="tv_usernick">昵称</string>
    <string name="gender">性别</string>
    <string name="tv_age">年龄</string>
    <string name="mine_head_icon">头像</string>
    <string name="mine_nick">昵称</string>
    <string name="mine_sex">性别</string>
    <string name="mine_email">邮箱</string>
    <string name="logout_title">注销</string>
    <string name="logout_tip">是否要注销？</string>
    <string name="logout_positive_button">确定</string>
    <string name="logout_negative_button">取消</string>
    <string name="email">邮箱</string>
    <string name="area">地区</string>
    <string name="my_location">我的地址</string>
    <string name="my_team">我的球队</string>
    
    <string name="create_team">创建球队</string>
    <string name="team_name">球队名称</string>
    <string name="city">城市</string>
    <string name="use">使用</string>
    <string name="name">名称</string>
    <string name="slogan">口号</string>
    <string name="description">介绍</string>
    <string name="badge">队徽</string>
    <string name="first_captain">队长</string>
    <string name="second_captain">队副</string>
    <string name="team_home">主场</string>
    <string name="founded_time">成立时间</string>
    <string name="team_description">球队介绍</string>
    <string name="region">地区</string>
    <string name="member_number">人数</string>
    <string name="match_manage">比赛管理</string>
    <string name="team_shirt">队服</string>
    <string name="formation">阵容</string>
    <string name="team_member">球队成员</string>
    <string name="save">保存</string>

     <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
     <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="the_msg">消息</string>
    <string name="error_download_for_no_sdcard">存储卡已拔出，下载失败</string>
    <string name="hint_cancel_downlaod">取消下载</string>
    <string name="error_download_for_unkown_reason">网络异常，下载失败</string>
	<string name="text_delete">删除</string>
	<string name="contentDescription">contentDescription</string>
    
</resources>