<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AppWidget"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgColor" >

    <LinearLayout
        android:id="@+id/llt_tittlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/common_actionbar"
            layout="@layout/include_action_bar" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llt_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llt_tittlebar"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/edtPhone"
            style="@style/register_edit"
            android:layout_marginBottom="@dimen/dp_1"
            android:drawableLeft="@drawable/icon_register_phone"
            android:hint="@string/msg_input_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edtPhoneCode"
            style="@style/register_edit"
            android:layout_below="@+id/edtPhone"
            android:layout_marginBottom="@dimen/dp_1"
            android:drawableLeft="@drawable/icon_register_email"
            android:hint="@string/msg_input_verifi"
            android:inputType="number"
            android:paddingRight="@dimen/dp_100" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtPhone"
            android:layout_gravity="right|center"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_7"
            android:background="@color/btn_comment_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="btnOnClick"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:text="@string/send_verifi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/edtPwd"
            style="@style/register_edit"
            android:layout_below="@+id/edtPhoneCode"
            android:drawableLeft="@drawable/icon_register_pwd"
            android:hint="@string/hit_password"
            android:inputType="textVisiblePassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_regist"
        style="@style/WhiteText"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/llt_main"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="btnOnClick"
        android:text="注册" />

</RelativeLayout>