<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/viewGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/banner_color"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab_index_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_home"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_match"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab_event_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_match"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/rtl_match_tips"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/msg_tips" />

                <TextView
                    android:id="@+id/tv_match_tips"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_game_manage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab_team_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_team"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_team_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:visibility="invisible" />
            <!--
            <RelativeLayout
                android:id="@+id/rtl_team_tips"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/msg_tips" />

                <TextView
                    android:id="@+id/tv_team_tips"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </RelativeLayout>
            -->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab_chat_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_chat"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_chat_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:visibility="invisible" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/tab_me_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_me"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

</RelativeLayout>