<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AppWidget"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bgColor" >

   <include
       android:id="@+id/common_actionbar"
       android:layout_height="match_parent"
       layout="@layout/include_action_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_30"
            android:paddingTop="@dimen/dp_15" >

            <ImageButton
                android:id="@+id/ibtn_avatar"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_centerHorizontal="true"
                android:background="@color/none"
                android:contentDescription="@null"
                android:onClick="onRegisterClick"
                android:scaleType="fitXY"
                android:src="@drawable/icon_register_avatar" />

            <TextView
                android:id="@+id/ControlsOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ibtn_avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_7"
                android:text="@string/upload_avatar"
                android:textColor="@color/register_input"
                android:textSize="@dimen/sp_16" />

            <LinearLayout 
                    android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                
            </LinearLayout>
            <TextView
                android:id="@+id/ControlsTwo"
                style="@style/register_nick_text"
                android:layout_below="@+id/ControlsOne"
                android:text="@string/tv_usernick" />

            <EditText
                android:id="@+id/edtNick"
                style="@style/register_edit"
                android:layout_below="@+id/ControlsOne"
                android:layout_marginBottom="@dimen/dp_1"
                android:layout_toRightOf="@+id/ControlsTwo"
                android:hint="请输入昵称"
                android:paddingLeft="@dimen/dp_0" />
			
               <TextView
                android:id="@+id/ControlsTread"
                style="@style/register_nick_text"
                android:layout_below="@+id/ControlsTwo"
                android:text="球队位置" />

            <EditText
                android:id="@+id/edtPosition"
                style="@style/register_edit"
                android:layout_below="@+id/ControlsTwo"
                android:layout_marginBottom="@dimen/dp_1"
                android:layout_toRightOf="@+id/ControlsTread"
                android:hint="请输入球队位置"
                android:paddingLeft="@dimen/dp_0" 
   />
            <LinearLayout 
                 android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_below="@+id/llt_two"
                >

            <TextView
                
	            android:layout_marginBottom="@dimen/dp_1"
                android:hint="@string/hint_selete_birth_date"
                android:onClick="onRegisterClick"
                android:paddingLeft="@dimen/dp_0" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        style="@style/WhiteText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_login_selector"
        android:onClick="onRegisterClick"
        android:text="立即加入" />

</LinearLayout>